--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,10 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+pool:
+  vmImage: 'ubuntu-latest'
 
-trigger:
-- master
-
-resources:
-- repo: self
-
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
+jobs:
+  - job: Docker_Compose_Scan
     steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+      - script: docker-compose up --abort-on-container-exit
+        displayName: Docker Compose Scan
+        env:
+          HAWK_API_KEY: $(hawk_api_key)
