--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,9 +2,14 @@ pool:
   vmImage: 'ubuntu-latest'
 
 jobs:
-  - job: Docker_Compose_Scan
+  - job: Local_Scan
     steps:
-      - script: docker-compose up --abort-on-container-exit
-        displayName: Docker Compose Scan
+      - script: docker run --detach --publish 8080:80 nginx
+        displayName: Start Nginx
+      - script: >
+          docker run -v $(pwd):/hawk:rw -t
+          -e API_KEY="${HAWK_API_KEY}"
+          stackhawk/hawkscan
+        displayName: Run HawkScan
         env:
           HAWK_API_KEY: $(hawk_api_key)
