--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,8 +4,9 @@ pool:
 jobs:
   - job: Local_Scan
     steps:
-      - script: docker pull dolevf/dvga 
-                docker run -t -p 5013:5013 -e WEB_HOST=0.0.0.0 dolevf/dvga
+      - script: >
+                docker pull dolevf/dvga 
+                docker run --detach --publish 5013:5013 -e WEB_HOST=0.0.0.0 dolevf/dvga
         displayName: Start Nginx
       - script: >
           docker run -v $(pwd):/hawk:rw -t
