--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ jobs:
     steps:
       - script: >
                 docker pull dolevf/dvga 
-                docker run --detach --publish 5013:5013 -e WEB_HOST=0.0.0.0 dolevf/dvga
+                docker run --publish 5013:5013 -e WEB_HOST=0.0.0.0 dolevf/dvga
         displayName: Start Nginx
       - script: >
           docker run -v $(pwd):/hawk:rw -t
