--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,30 +1,11 @@
-resources:
-- repo: self
+pool:
+  vmImage: 'ubuntu-latest'
 
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
-
-#docker run --detach --publish 5013 nginx
+jobs:
   - job: Local_Scan
     steps:
-      - script: docker run --detach --publish 8080 $(tag)
+      - script: pip3 install -r requirements.txt
+                python3 app.py
         displayName: Start Nginx
       - script: >
           docker run -v $(pwd):/hawk:rw -t
