--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ jobs:
   - job: Local_Scan
     steps:
       - script: docker pull dolevf/dvga
-                docker run -t 5013 dolevf/dvga
+                docker run -p 127.0.0.1:80:8080/tcp dolevf/dvga
         displayName: Start Nginx
       - script: >
           docker run -v $(pwd):/hawk:rw -t
