--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ jobs:
   - job: Local_Scan
     steps:
       - script: docker pull dolevf/dvga
-                docker run --detach --publish 8080:80 dolevf/dvga
+                docker run dolevf/dvga
         displayName: Start Nginx
       - script: >
           docker run -v $(pwd):/hawk:rw -t
