--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,8 +4,8 @@ pool:
 jobs:
   - job: Local_Scan
     steps:
-      - script: docker pull dolevf/dvga
-                docker run dolevf/dvga
+      - script: docker build -t dvga
+                docker run dvga
         displayName: Start Nginx
       - script: >
           docker run -v $(pwd):/hawk:rw -t
