--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ pool:
 jobs:
   - job: Local_Scan
     steps:
-      - script: docker build -t dvga
+      - script: docker build -t dvga .
                 docker run dvga
         displayName: Start Nginx
       - script: >
