--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,22 @@
-pool:
-  vmImage: 'ubuntu-latest'
 
-jobs:
-  - job: Local_Scan
-    steps:
-      - script: docker build -t dvga .
-                docker run dvga
-        displayName: Start Nginx
-      - script: >
-          docker run -v $(pwd):/hawk:rw -t
-          -e API_KEY="${HAWK_API_KEY}"
-          stackhawk/hawkscan
+
+pool:
+  vmImage: ubuntu-latest
+
+- task: DockerInstaller@0
+  inputs:
+    dockerVersion: '17.09.0-ce'
+
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: 
+            chmod -R 777  ./
+            docker build -t dvga .
+            docker run dvga
+            docker run -v $(pwd):/hawk:rw -t
+            -e API_KEY="${HAWK_API_KEY}"
+            stackhawk/hawkscan
         displayName: Run HawkScan
         env:
           HAWK_API_KEY: $(hawk_api_key)
