Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,9 +16,10 @@ steps:
     targetType: 'inline'
     script: 
             chmod -R 777  ./
-            docker  pull dolevf/dvga
-            docker run dolevf/dvga
-            docker run -v $(pwd):/hawk:rw -t -e API_KEY="${HAWK_API_KEY}" stackhawk/hawkscan
-  displayName: Run HawkScan
-  env:
-    HAWK_API_KEY: $(hawk_api_key)
+            docker  build -t dvga $(System.DefaultWorkingDirectory)
+            docker run -t -p 5013:5013 -e WEB_HOST=0.0.0.0 dvga
+            docker run -v $(pwd):/hawk:rw -t
+            -e API_KEY="${HAWK_API_KEY}"
+            stackhawk/hawkscan
+    env:
+          HAWK_API_KEY: $(hawk_api_key)
