--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -17,9 +17,13 @@ steps:
       displayName: 'Install checkov'
       name: 'install_checkov'
 
-  # Verify main files with Checkov
-    - bash: docker run -v $(pwd):/hawk:rw -t
+jobs:
+  - job: Local_Scan
+    steps:
+      - script: >
+          docker run -v $(pwd):/hawk:rw -t
           -e API_KEY="${HAWK_API_KEY}"
           stackhawk/hawkscan
-      displayName: 'Verify root module with Checkov'
-      name: 'checkov_root_check'
+        displayName: Run HawkScan
+        env:
+          HAWK_API_KEY: $(hawk_api_key)
