--- a/stackhawk.yml
+++ b/stackhawk.yml
@@ -2,3 +2,11 @@ app:
   applicationId: 3bcc060a-2c1c-4c6f-9699-57ab0c0f8436
   host: http://0.0.0.0:8080/
   env: Development
+  graphqlConf:
+      enabled: true
+  autoPolicy: true
+  autoInputVectors: true
+  
+hawk:
+  spider:
+    base: false
