--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -26,6 +26,7 @@ jobs:
     - bash: sleep 10
     - bash: docker ps -a
       displayName: 'Run DVGA app'
+    - bash: export SERVER_PORT=8080  
     - bash: docker run -v $(pwd):/hawk:rw -t -e API_KEY="${HAWK_API_KEY}" stackhawk/hawkscan
       displayName: Run HawkScan
       env:
