--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -22,11 +22,11 @@ jobs:
     steps:
     # Install Checkov
     - bash: docker build -t dvga $(System.DefaultWorkingDirectory)
-    - bash: docker run --detach -t -p 8080:8080 -e WEB_HOST=0.0.0.0 -e WEB_PORT=8080 dvga
+    - bash: docker run --detach -t -p 5013:5013 -e WEB_HOST=0.0.0.0 dvga
     - bash: sleep 10
     - bash: docker ps -a
       displayName: 'Run DVGA app'
-    - bash: export SERVER_PORT=8080  
+    - bash: export SERVER_PORT=5013  
     - bash: docker run -v $(pwd):/hawk:rw -t -e API_KEY="${HAWK_API_KEY}" stackhawk/hawkscan
       displayName: Run HawkScan
       env:
