--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   # Fire up the app to test, nginx_test
   nginx_test:
-    image: nginx
+    image: dolevf/dvga
 
   # Fire up hawkscan to scan the test app (nginx_test)
   hawkscan:
