Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,17 @@
 
 pool:
-  vmImage: ubuntu-latest
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  vmImage: 'ubuntu-latest'
 
-
-
-- task: DockerInstaller@0
-  inputs:
-    dockerVersion: '17.09.0-ce'
-
-- task: Bash@3
-  inputs:
-    targetType: 'inline'
-    script: 
-            chmod -R 777  ./
-            docker  build -t dvga $(System.DefaultWorkingDirectory)
-            docker run -t -p 5013:5013 -e WEB_HOST=0.0.0.0 dvga
-            docker run -v $(pwd):/hawk:rw -t
-            -e API_KEY="${HAWK_API_KEY}"
-            stackhawk/hawkscan
-    env:
+jobs:
+  - job: Local_Scan
+    steps:
+      - script: docker run --detach --publish 8080:80 nginx
+        displayName: Start Nginx
+      - script: >
+          docker run -v $(pwd):/hawk:rw -t
+          -e API_KEY="${HAWK_API_KEY}"
+          stackhawk/hawkscan
+        displayName: Run HawkScan
+        env:
           HAWK_API_KEY: $(hawk_api_key)
+
