--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -5,11 +5,9 @@ on:
     branches:
     - main
     - master
-    paths:
-    - .github/workflows/semgrep.yml
-  schedule:
+  #schedule:
   # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-  - cron: 48 18 * * *
+  #- cron: 48 18 * * *
 name: Semgrep
 jobs:
   semgrep:
@@ -22,3 +20,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - run: semgrep ci
+    
+    - name: Run Semgrep (Fail on Critical)
+      run: semgrep ci --severity=ERROR 
+          
