--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,26 +1,25 @@
+name: Semgrep
 on:
   workflow_dispatch: {}
   pull_request: {}
   push:
     branches:
-    - main
-    - master
-  #schedule:
-  # random HH:MM to avoid a load spike on GitHub Actions at 00:00
-  #- cron: 48 18 * * *
-name: Semgrep
+      - main
+      - master
+    paths:
+      - .github/workflows/semgrep.yml
+ 
 jobs:
   semgrep:
     name: semgrep/ci
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
     env:
       SEMGREP_APP_TOKEN: ${{ secrets.SEMGREP_APP_TOKEN }}
     container:
-      image: returntocorp/semgrep
+      image: semgrep/semgrep
+    if: (github.actor != 'dependabot[bot]')
     steps:
-    - uses: actions/checkout@v3
-    - run: semgrep ci
-    
-    - name: Run Semgrep (Fail on Critical)
-      run: semgrep ci --severity=ERROR 
-          
+      - uses: actions/checkout@v4
+      - run: semgrep ci
