--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -23,3 +23,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: semgrep ci
+      
+      - name: Run Semgrep (Fail on Critical, High)
+      - run: semgrep ci --severity=ERROR --severity=WARNING 
+
+      
